[gd_scene load_steps=11 format=2]

[ext_resource path="res://Chelsea_Market/ChelseaMarket-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.803922, 0.235294, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.341176, 0.2, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=7]
action = "ui_select"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleMessage" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -104.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Shoot Them!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreMessage" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -104.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -200.0
margin_right = 112.0
margin_bottom = -100.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SplashBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="SplashTimer" to="." method="_on_SplashTimer_timeout"]
